[package]
name = "mc-tcpmux"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.42", features = ["cargo"] }
notify = "8.1.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
tokio = { version = "1.47.0", features = ["full"] }
toml = "0.9.3"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
