[package]
name = "mc-tcpmux"
version = "0.1.0"
edition = "2024"
description = "A TCP port multiplexer for Minecraft servers."
license = "MIT"
homepage = "https://github.com/r0x5a/mc-tcpmux"
repository = "https://github.com/r0x5a/mc-tcpmux.git"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.42", features = ["cargo"] }
notify = "8.1.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
tokio = { version = "1.47.0", features = ["full"] }
toml = "0.9.3"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
